--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
 		"php": ">= 5.3.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "3.7.*"
+		"phpunit/phpunit": "4.2.*"
 	},
 	"autoload": {
 		"psr-4": {
-			"CarlosAfonso\\Logga\\": "src/"
+			"Logga\\": "src/"
 		},
 		"files": [
 			"src/_Constants.php"
