--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ php:
   - 5.5
   - 5.6
 
-install:
- - composer install --dev
+before_script:
+ - travis_retry composer self-update
+ - travis_retry composer install --prefer-source --no-interaction --dev
 
-script: phpunit tests/
+script: vendor/bin/phpunit --verbose
