--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
 	"license": "MIT",
 	"homepage": "http://github.com/carlosafonso/logga",
 	"require": {
-		"php": ">= 5.3.0"
+		"php": ">= 5.3.0",
+		"phpmailer/phpmailer": "5.2.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "4.2.*"
+		"phpunit/phpunit": "4.2.*",
+		"mikey179/vfsStream": "1.*"
 	},
 	"autoload": {
 		"psr-4": {
